footer, menu content, responsive update

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,23 +1,19 @@
 @include font("calligraffitiregular", "Calligraffiti");
 @include font("black_jackregular", "blackjack");
-@include font("yellowtailregular", "Yellowtail-Regular");
 @include font("redressedregular", "Redressed");
 @include font("blokletters_potloodpotlood", "Blokletters-Potlood");
 @include font("jrhandregular", "jr!ha___");
 
 body{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Arial Narrow', Arial, sans-serif;
 }
 
 .card{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'blokletters_potloodpotlood', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.menu__enchantee{
-    
-    &--name{
-        font-family: "black_jackregular", Arial, Helvetica, sans-serif;
-    }
+.menu__enchantee--name{ 
+    font-family: "black_jackregular", Arial, Helvetica, sans-serif;
 }
 .menu__francaise--name{
     font-family: 'Verdana', Arial, Helvetica, sans-serif;
