--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -12,6 +12,10 @@
                     display: block;
                 }
                 .menu__#{$menu}--menu {
+                    @if $menu == "enchantee" {
+                        text-transform: uppercase;
+                        font-weight: bold;
+                    }
                     color: map-get(map-get($color, color), color-left);
                 }
                 .menu__#{$menu}--name{
@@ -46,6 +50,11 @@
 
 @mixin mobile-only{
     @media screen and (max-width:599px){
+        @content;
+    }
+}
+@mixin tablet-only{
+    @media screen and (max-width:800px){
         @content;
     }
 }
