--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -15,9 +15,9 @@
 
 .footer{
     margin-top: 5rem;
-    padding: 20px;
+    padding: 17px;
     position: sticky;
-    bottom: 0px;
+    bottom: 0;
     color: $color-primary;
     background-color: $color-background;
     display: flex;
