--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,7 +1,11 @@
 @mixin select-menu{
-    width: 260px;
-    height: 370px;
+    width: 280px;
+    height: 390px;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    @include mobile-only{
+        width: 320px;
+        height: 430px;
+    }
 }
 
 @mixin menu($menu-list){
