--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -9,27 +9,31 @@
 }
 
 .menu{
-    display: grid;
-    width: 580px;
-    grid-template-columns: repeat(2, 260px);
-    grid-gap: 60px;
+    width: 700px;
     margin: 3rem auto;
-    text-align: center;
-    justify-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     transform: scale(1);
+    @include tablet-only{
+        width: 590px;
+    }
     @include mobile-only{
-        width: 260px;
-        grid-template-columns: repeat(1, 260px);
-        
+        width: 320px;
     }
 }
 
 .card{
+    margin: 1rem auto;
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     text-decoration: none;
-    font-size: 1.25rem;
+    font-size: 1.3rem;
+    @include mobile-only{
+        font-size: 1.6rem;
+    }
     @include select-menu;
     @include menu($menu-list);
     transition: all 300ms ease-in-out;
@@ -41,7 +45,10 @@
         & img{
             transform: scale(1.4);
         }
-        font-size: 1.5rem;
+        font-size: 1.6rem;
+        @include mobile-only{
+            font-size: 1.8rem;
+        }
         opacity: .65;
     }
 }
