--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -12,16 +12,16 @@ body{
     font-family: 'blokletters_potloodpotlood', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.menu__enchantee--name{ 
+.menus__enchantee--name{ 
     font-family: "black_jackregular", Arial, Helvetica, sans-serif;
 }
-.menu__francaise--name{
+.menus__francaise--name{
     font-family: 'Verdana', Arial, Helvetica, sans-serif;
 }
-.menu__papilles--name{
+.menus__papilles--name{
     font-family: "calligraffitiregular", Arial, Helvetica, sans-serif;
 }
-.menu__gout--name{
+.menus__gout--name{
     font-family: "jrhandregular", Arial, Helvetica, sans-serif;
 }
 
