--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -8,7 +8,7 @@
     }
 }
 
-.menu{
+.menus{
     width: 700px;
     margin: 3rem auto;
     display: flex;
@@ -30,11 +30,15 @@
     align-items: center;
     text-align: center;
     text-decoration: none;
+    width: 280px;
+    height: 390px;
     font-size: 1.3rem;
     @include mobile-only{
+        width: 320px;
+        height: 430px;
         font-size: 1.6rem;
     }
-    @include select-menu;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
     @include menu($menu-list);
     transition: all 300ms ease-in-out;
     & img{
