--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -15,23 +15,27 @@
 
 .footer{
     margin-top: 5rem;
-    padding: 17px;
     position: sticky;
     bottom: 0;
     color: $color-primary;
     background-color: $color-background;
-    display: flex;
-    justify-content: space-between;
     font-size: 1.4rem;
     & a {
         color: $color-primary;
         text-decoration: none;
     }
-    span:hover{
-        animation: wiggle 1s infinite ease-in-out;
-    }
-    @include mobile-only{
-        font-size: 1.2rem;
-        padding: 10px;
+    & ul {
+        margin-left: 0;
+        padding: 1.2rem;
+        display: flex;
+        list-style-type: none;
+        justify-content: space-between;
+        @include mobile-only{
+            font-size: 1.2rem;
+            padding: .5rem;
+        }
+        li:hover{
+            animation: wiggle 1s infinite ease-in-out;
+        }
     }
 }
