deplacement balise <hr> dans la page des menus

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -16,7 +16,7 @@ body{
     font-family: "black_jackregular", Arial, Helvetica, sans-serif;
 }
 .menus__francaise--name{
-    font-family: 'Verdana', Arial, Helvetica, sans-serif;
+    font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
 }
 .menus__papilles--name{
     font-family: "calligraffitiregular", Arial, Helvetica, sans-serif;
