--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -32,11 +32,11 @@
     text-decoration: none;
     width: 280px;
     height: 390px;
-    font-size: 1.3rem;
+    font-size: .95rem;
     @include mobile-only{
         width: 320px;
         height: 430px;
-        font-size: 1.6rem;
+        font-size: 1.15rem;
     }
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
     @include menu($menu-list);
@@ -47,19 +47,20 @@
     }
     &:hover{
         & img{
-            transform: scale(1.4);
+            transform: scale(1.2);
         }
-        font-size: 1.6rem;
+        font-size: 1.1rem;
         @include mobile-only{
-            font-size: 1.8rem;
+            font-size: 1.3rem;
         }
         opacity: .65;
     }
 }
 
 .soon{
+    font-size: 1.2rem;
     margin: auto;
-    width: 15rem;
+    width: 16rem;
     text-align: center;
     &__title{
         border-radius: 15px;
