--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,7 +1,7 @@
 .header{
     text-align: center;
     background-color: $color-background;
-    padding: 10px;
+    padding: .2rem;
     &__title{
         color: $color-primary;
         font-size: 3rem;
