--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import "./utils/mixins";
 
 @import "./base/typography";
+@import "./base/base";
 
 @import "./layout/header";
 @import "./layout/footer";
